rtg_tests/negative/import_cycle/go.mod
module example.com/rtgtests/negative/cycle

go 1.25
